# linux-application-development-2021

./: README.md
02_TerminalProject/: README.md  file_example.txt  renderer.c
03_Multifile/: Makefile  README.md  fun.c  prog.c
03_TerminalProject/: Makefile  README.md  renderer.c  renderer.cc
04_Text/: README.md  randomize.sh
05_Debug/: README.md  mod5.gdb
05_Debugging/: Makefile  README.md  mod5.gdb  mod5_model  range.c  range.gdb  range_model
06_TracingFencing/: Makefile  README.md  move.c  protect.c  testfile.txt  testfilePROTECT.txt
07_Environmental/: CMakeLists.txt  README.md  rhasher.c
07_Environmental/test-sources/: test2
08_Regexps/: CMakeLists.txt  README.md  a.out  esub.c  pos_tests.sh
09_Testing/: CMakeLists.txt  README.md  buf.cpp  buf.h  code-coverage.cmake  tests.cpp
10_I18n/: 100.c  CMakeLists.txt  README.md
10_I18n/po/: messages.po  ru.po
10_I18n/po/ru/LC_MESSAGES/: 100.mo
11_Documenting/: 100.c  CMakeLists.txt  Doc.md  Doxyfile.in  README.md  g.py
11_Documenting/po/: ru.po
12_PatchInstall/: 100.c  CMakeLists.txt  README.md
12_PatchInstall/po/: ru.po
